portfolio page updated, html, contact, and css. links added to github repos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>About | Your Name</title>
+  <title>About | Irving Aramburo</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -12,7 +12,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Irving Aramburo</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -27,11 +27,16 @@
 
       <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
+      <p>I am a current student at UCSD Extension, enrolled in "The Coding Bootcamp". Experience in a variety
+          of technologies such as,
+          HTML, CSS, Bootstrap, Javascript,JQuery, AJAX, and other important Web Developing tools. I come from a Graphic Design background from ITT Technical Institute.</p>
 
-      <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
+      <p>I opted for the Web Development field because it is amazing being able to come out with a design from a simple idea,
+         but it is even better being capable of putting that design into its development.</p>
 
-      <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+         <div class="work">
+            <a href="https://www.linkedin.com/in/irving-aramburo-227111186/">Linkedin</a>
+          </div>
 
     </section>
 
@@ -39,7 +44,7 @@
 
   <footer>
     <div class="container">
-      Copyright &copy; 
+      Copyright &copy;
     </div>
   </footer>
 </body>
