--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio | Your Name</title>
+  <title>Portfolio | Irving Aramburo</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -12,7 +12,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Repos</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -26,30 +26,28 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+        <a href="https://github.com/vinirg22/Project-1-Geotat.git">PORTFOLIO</a>
 
-        <h3>Word Guess</h3>
+      </div>
+
+      <div class="work">
+        <a href="https://github.com/vinirg22/Psychic-Game.git">PSYCHIC GAME</a>
+
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+        <a href="https://github.com/vinirg22/TriviaGame-.git">TRIVIA GAME</a>
 
-        <h3>RPG Game</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-
-        <h3>Trivia Game</h3>
+        <a href="https://github.com/vinirg22/GifTastic.git">GIFTASTIC</a>
       </div>
+
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-
-        <h3>Rutgers Info Widget</h3>
+        <a href="file:///Volumes/IRVING/Resume/Resume.%20Irving%20Aramburo%20-%20Copy.pdf">RESUME</a>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
 
-        <h3>Rock Paper Scissors</h3>
-      </div>
+
+
 
     </section>
 
