--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Irving Aramburo</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -23,22 +23,22 @@
 
   <div id="main-container" class="container">
     <section class="main-section">
-      <h1>Contact</h1>
+      <h1>Contact Information</h1>
 
       <form id="contact-form">
         <div>
-          <label for="name">Name</label>
-          <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+          <label for="name">For further information please email me at:</label>
+          <!-- <input type="text" id="name" name="name" placeholder="John Smith" required="required"> -->
         </div>
         <div>
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+          <label for="email">Email: aramburo.irving@gmail.com</label>
+          <!-- <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required"> -->
         </div>
         <div>
-          <label for="message">Message</label>
-          <textarea id="message" name="message" required="required"></textarea>
+          <!-- <label for="message">Message</label> -->
+          <!-- <textarea id="message" name="message" required="required"></textarea> -->
         </div>
-        <input type="submit">
+        <!-- <input type="submit"> -->
       </form>
 
     </section>
